feat(dop): internationalization optimization in test management

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,6 +20,7 @@
     "Add": "Add",
     "Add Project": "Add Project",
     "Add Resource": "Add Resource",
+    "Add {name}": "Add {name}",
     "Add-member": "Add",
     "Add-notification-channel": "Add",
     "Addon": "Addon",
@@ -50,6 +51,7 @@
     "Are you sure you want to revert the deprecated status of {name}?": "Are you sure you want to revert the deprecated status of {name}?",
     "Are you sure you want to switch notification channel ?": "Are you sure you want to switch notification channel ?",
     "Artifacts": "Artifacts",
+    "Ascending": "Ascending",
     "Asia-pacific": "Asia-pacific",
     "Attribution type": "Attribution type",
     "Audit": "Audit",
@@ -65,6 +67,7 @@
     "Basic Configuration": "Basic Configuration",
     "Basic settings": "Basic settings",
     "Batch Operation": "Batch Operation",
+    "Batch Operations": "Batch Operations",
     "Beijing": "Beijing",
     "Branch protection": "Branch protection",
     "Britain": "Britain",
@@ -94,11 +97,13 @@
     "Cluster name": "Cluster name",
     "Collapse": "Collapse",
     "Colour": "Colour",
+    "Commit": "Commit",
     "Compare": "Compare",
     "Comparison operator": "Comparison operator",
     "Component": "Component",
     "Config": "Config",
     "Configuration": "Configuration",
+    "Configuration Information": "Configuration Information",
     "Configuration Sheet": "Configuration Sheet",
     "Configuration-alarm": "Configuration",
     "Console": "Console",
@@ -109,6 +114,7 @@
     "Container Resource": "Container Resource",
     "Copy": "Copy",
     "Copy All": "Copy All",
+    "Creation time": "Creation time",
     "Creation time-at": "Creation time",
     "Creator": "Creator",
     "Custom Alert": "Custom Alert",
@@ -124,13 +130,16 @@
     "Deployment": "Deployment",
     "Deployment details": "Deployment details",
     "Deployment log": "Deployment log",
+    "Descending": "Descending",
     "Description": "Description",
+    "Details": "Details",
     "Details-enter": "Details",
     "DevOps Platform": "DevOps Platform",
     "Development": "Development",
     "DingTalk": "DingTalk",
     "DingTalk address": "DingTalk address",
     "DingTalk-work-notice": "DingTalk",
+    "Directory": "Directory",
     "Disk": "Disk",
     "Download": "Download",
     "Dubai": "Dubai",
@@ -156,6 +165,7 @@
     "Export Records": "Export Records",
     "Fast Data Platform": "Fast Data Platform",
     "February": "February",
+    "Fetch latest records": "Fetch latest records",
     "Field": "Field",
     "File": "File",
     "Filter": "Filter",
@@ -210,7 +220,6 @@
     "Last week": "Last week",
     "Less than": "Less than",
     "Load": "Load",
-    "Log": "Log",
     "Log Query": "Log Query",
     "London": "London",
     "Low": "Low",
@@ -274,7 +283,9 @@
     "Overview": "Overview",
     "Overview-alarm": "Overview",
     "Parameter Settings": "Parameter Settings",
+    "Passed": "Passed",
     "Password": "Password",
+    "Paused": "Paused",
     "Pending": "Pending",
     "Performance range": "Performance range",
     "Period": "Period",
@@ -294,7 +305,9 @@
     "Please enter the description": "Please enter the description",
     "Please enter the member name to search": "Please enter the member name to search",
     "Please enter the number of {min}-{max} decimal": "Please enter the number of {min}-{max} decimal",
+    "Please enter the {name}": "Please enter the {name}",
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
+    "Please enter {name}": "Please enter {name}",
     "Please select the member label": "Please select the member label",
     "Please select the role": "Please select the role",
     "Pod Details": "Pod Details",
@@ -359,8 +372,8 @@
     "Search by keyword": "Search by keyword",
     "Search by keyword-char": "Search by keyword",
     "Search by name": "Search by name",
-    "Search by plan name": "Search by plan name",
     "Search by nickname, username, email or phone number": "Search by nickname, username, email or phone number",
+    "Search by plan name": "Search by plan name",
     "Search by project name": "Search by project name",
     "Search by username": "Search by username",
     "Search results are empty": "Search results are empty",
@@ -387,6 +400,7 @@
     "Staging-env": "Staging",
     "Standard": "Standard",
     "Start time": "Start time",
+    "Status": "Status",
     "Stopped": "Stopped",
     "Submit the following information to the service provider to apply for an SMS template": "Submit the following information to the service provider to apply for an SMS template",
     "Submitter": "Submitter",
@@ -447,6 +461,7 @@
     "Version": "Version",
     "Version has been updated, it is recommended to refresh the page": "Version has been updated, it is recommended to refresh the page",
     "View Results": "View Results",
+    "View details": "View details",
     "Virginia": "Virginia",
     "Voice Template ID": "Voice Template ID",
     "Wed": "Wed",
@@ -491,7 +506,6 @@
     "are you sure you want to delete this item?": "are you sure you want to delete this item?",
     "are you sure?": "are you sure?",
     "artifact management": "artifact management",
-    "Ascending": "Ascending",
     "assert {name} setting is abnormal": "assert {name} setting is abnormal",
     "assignee": "assignee",
     "associated ability": "associated ability",
@@ -529,7 +543,6 @@
     "capacity type": "capacity type",
     "change account permissions": "change account permissions",
     "character set": "character set",
-    "check detail": "check detail",
     "check log": "check log",
     "check whether your request is approved": "check whether your request is approved.",
     "choose": "choose",
@@ -551,12 +564,10 @@
     "cluster infos": "cluster infos",
     "clusters": "clusters",
     "comment": "comment",
-    "Commit": "Commit",
     "commit date": "commit date",
     "committed at": "committed at",
     "comparison results": "comparison results",
     "configuration information": "configuration information",
-    "Configuration Information": "Configuration Information",
     "configuration mode": "configuration mode",
     "configuration upgrade": "configuration upgrade",
     "confirm password": "confirm password",
@@ -587,7 +598,7 @@
     "create client": "create client",
     "create new account": "create new account",
     "create template": "create template",
-    "Creation time": "Creation time",
+    "create time": "create time",
     "create time ascending": "create time ascending",
     "create time descending": "create time descending",
     "create {name}": "create {name}",
@@ -602,8 +613,6 @@
     "database exception": "database exception",
     "days": "days",
     "default": "default",
-    "delete": "delete",
-    "Delete": "Delete",
     "delete certificate": "delete certificate",
     "delete {name}": "delete {name}",
     "deleted": "deleted",
@@ -612,11 +621,9 @@
     "deploying": "deploying",
     "deprecated": "deprecated",
     "deprecated version": "deprecated version",
-    "Descending": "Descending",
     "design": "design",
     "designated person": "designated person",
     "detail": "detail",
-    "Details": "Details",
     "dev": "dev",
     "dev environment": "dev environment",
     "develop": "develop",
@@ -664,7 +671,6 @@
     "failed to create node": "failed to create node",
     "failed to parse API description document": "failed to parse API description document",
     "failed to start node": "failed to start node",
-    "Fetch latest records": "Fetch latest records",
     "file saving directory": "file saving directory",
     "filter by {name}": "filter by {name}",
     "fold": "fold",
@@ -751,6 +757,7 @@
     "no quota": "no quota",
     "no results yet": "no results yet",
     "no running runtime": "no running runtime",
+    "none": "none",
     "not in": "not in",
     "not member": "not member",
     "not started": "not started",
@@ -765,7 +772,6 @@
     "operate": "operate",
     "operated successfully": "operated successfully",
     "operation": "operation",
-    "Operations": "Operations",
     "operation log": "operation log",
     "operation manage platform": "operation manage platform",
     "operations": "operations",
@@ -789,8 +795,8 @@
     "pending execution": "pending execution",
     "platform configs": "platform configs",
     "please authenticate first": "please authenticate first",
-    "please choose {name}": "please choose {name}",
     "please choose the {name}": "please choose the {name}",
+    "please choose {name}": "please choose {name}",
     "please confirm your password!": "please confirm your password!",
     "please contact": "please contact",
     "please deal with it promptly": "please deal with it promptly",
@@ -800,8 +806,6 @@
     "please enter an integer between 1 ~ 65535!": "please enter an integer between 1 ~ 65535!",
     "please enter the correct format": "please enter the correct format",
     "please enter verification code": "please enter verification code",
-    "Please enter {name}": "Please enter {name}",
-    "Please enter the {name}": "Please enter the {name}",
     "please fill in the correct IP address or domain name!": "please fill in the correct IP address or domain name!",
     "please fill in the correct outbox username!": "please fill in the correct outbox username!",
     "please fill in the correct value": "please fill in the correct value",
@@ -900,8 +904,7 @@
     "start with {name}": "start with {name}",
     "startup error": "startup error",
     "startup failed": "startup failed",
-    "state": "state",
-    "Status": "Status",
+    "status": "status",
     "status switched successfully": "status switched successfully",
     "stay tuned": "stay tuned",
     "still unable to connect after trying again": "still unable to connect after trying again",
