--- a/locales/zh.json
+++ b/locales/zh.json
@@ -20,6 +20,7 @@
     "Add": "新建",
     "Add Project": "创建项目",
     "Add Resource": "新建资源",
+    "Add {name}": "添加{name}",
     "Add-member": "添加成员",
     "Add-notification-channel": "新建通知渠道",
     "Addon": "Add-on",
@@ -50,6 +51,7 @@
     "Are you sure you want to revert the deprecated status of {name}?": "确定要还原 {name} 为可用状态吗?",
     "Are you sure you want to switch notification channel ?": "您确定要切换通知渠道吗?",
     "Artifacts": "制品",
+    "Ascending": "升序",
     "Asia-pacific": "亚太",
     "Attribution type": "归属类型",
     "Audit": "审计",
@@ -65,6 +67,7 @@
     "Basic Configuration": "基本配置",
     "Basic settings": "基础设置",
     "Batch Operation": "批量操作",
+    "Batch Operations": "批量操作",
     "Beijing": "北京",
     "Branch protection": "被保护分支",
     "Britain": "英国",
@@ -94,11 +97,13 @@
     "Cluster name": "集群名称",
     "Collapse": "收起",
     "Colour": "着色",
+    "Commit": "提交",
     "Compare": "对比",
     "Comparison operator": "比较运算符",
     "Component": "组件",
     "Config": "配置",
     "Configuration": "配置",
+    "Configuration Information": "配置信息",
     "Configuration Sheet": "配置单",
     "Configuration-alarm": "告警配置",
     "Console": "控制台",
@@ -109,6 +114,7 @@
     "Container Resource": "容器资源",
     "Copy": "复制",
     "Copy All": "全部复制",
+    "Creation time": "创建时间",
     "Creation time-at": "创建于",
     "Creator": "创建人",
     "Custom Alert": "自定义告警",
@@ -124,13 +130,16 @@
     "Deployment": "部署",
     "Deployment details": "部署详情",
     "Deployment log": "部署日志",
+    "Descending": "降序",
     "Description": "描述",
+    "Details": "详情",
     "Details-enter": "进入详情",
     "DevOps Platform": "DevOps 平台",
     "Development": "开发环境",
     "DingTalk": "钉钉群",
     "DingTalk address": "钉钉地址",
     "DingTalk-work-notice": "钉钉工作通知",
+    "Directory": "目录",
     "Disk": "磁盘",
     "Download": "下载",
     "Dubai": "迪拜",
@@ -156,6 +165,7 @@
     "Export Records": "导出记录",
     "Fast Data Platform": "快数据平台",
     "February": "2月",
+    "Fetch latest records": "返回最新记录",
     "Field": "字段",
     "File": "文件",
     "Filter": "过滤",
@@ -210,7 +220,6 @@
     "Last week": "上周",
     "Less than": "小于",
     "Load": "负载",
-    "Log": "日志",
     "Log Query": "日志查询",
     "London": "伦敦",
     "Low": "低",
@@ -274,7 +283,9 @@
     "Overview": "总览",
     "Overview-alarm": "告警总览",
     "Parameter Settings": "参数设置",
+    "Passed": "已通过",
     "Password": "密码",
+    "Paused": "暂停",
     "Pending": "待审核",
     "Performance range": "性能区间",
     "Period": "周期",
@@ -294,7 +305,9 @@
     "Please enter the description": "请输入描述",
     "Please enter the member name to search": "请输入成员名搜索",
     "Please enter the number of {min}-{max} decimal": "请填写{min}-{max}位小数的数字",
+    "Please enter the {name}": "请输入{name}",
     "Please enter version number, such as x.y.z.": "请输入版本号，如：x.y.z",
+    "Please enter {name}": "请输入{name}",
     "Please select the member label": "请选择成员标签",
     "Please select the role": "请选择成员角色",
     "Pod Details": "POD详情",
@@ -359,8 +372,8 @@
     "Search by keyword": "输入关键词搜索",
     "Search by keyword-char": "搜索关键字",
     "Search by name": "按名称搜索",
-    "Search by plan name": "按名称搜索",
     "Search by nickname, username, email or phone number": "通过昵称、用户名、邮箱或手机号搜索",
+    "Search by plan name": "按名称搜索",
     "Search by project name": "搜索项目名",
     "Search by username": "通过用户名搜索",
     "Search results are empty": "搜索结果为空",
@@ -387,6 +400,7 @@
     "Staging-env": "预发环境",
     "Standard": "标准",
     "Start time": "启动时间",
+    "Status": "状态",
     "Stopped": "已停止",
     "Submit the following information to the service provider to apply for an SMS template": "请按如下内容提交至服务商申请短信模板",
     "Submitter": "提交人",
@@ -447,6 +461,7 @@
     "Version": "版本",
     "Version has been updated, it is recommended to refresh the page": "版本已更新，建议刷新页面",
     "View Results": "查看结果",
+    "View details": "查看详情",
     "Virginia": "弗利尼亚",
     "Voice Template ID": "语音模板 ID",
     "Wed": "三",
@@ -491,7 +506,6 @@
     "are you sure you want to delete this item?": "您确定要删除此项吗?",
     "are you sure?": "是否确认？",
     "artifact management": "制品管理",
-    "Ascending": "升序",
     "assert {name} setting is abnormal": "断言 {name} 设置异常",
     "assignee": "指定人",
     "associated ability": "关联通用能力",
@@ -529,7 +543,6 @@
     "capacity type": "容量型",
     "change account permissions": "更改账号权限",
     "character set": "字符集",
-    "check detail": "查看详情",
     "check log": "查看日志",
     "check whether your request is approved": "查看您的请求是否审批通过。",
     "choose": "选择",
@@ -551,12 +564,10 @@
     "cluster infos": "集群配置信息",
     "clusters": "集群",
     "comment": "评论",
-    "Commit": "提交",
     "commit date": "提交时间",
     "committed at": "提交于",
     "comparison results": "对比结果",
     "configuration information": "配置信息",
-    "Configuration Information": "配置信息",
     "configuration mode": "配置模式",
     "configuration upgrade": "配置更新",
     "confirm password": "确认密码",
@@ -587,7 +598,7 @@
     "create client": "创建客户端",
     "create new account": "创建新账号",
     "create template": "创建模板",
-    "Creation time": "创建时间",
+    "create time": "创建时间",
     "create time ascending": "创建时间升序",
     "create time descending": "创建时间降序",
     "create {name}": "创建{name}",
@@ -602,8 +613,6 @@
     "database exception": "数据库异常",
     "days": "天",
     "default": "默认",
-    "delete": "删除",
-    "Delete": "删除",
     "delete certificate": "删除证书",
     "delete {name}": "删除{name}",
     "deleted": "已删除",
@@ -612,11 +621,9 @@
     "deploying": "部署中",
     "deprecated": "已弃用",
     "deprecated version": "弃用版本",
-    "Descending": "降序",
     "design": "设计",
     "designated person": "处理人",
     "detail": "详情",
-    "Details": "详情",
     "dev": "开发",
     "dev environment": "开发环境",
     "develop": "开发",
@@ -664,7 +671,6 @@
     "failed to create node": "创建节点失败",
     "failed to parse API description document": "API 描述文档解析失败",
     "failed to start node": "开始节点失败",
-    "Fetch latest records": "返回最新记录",
     "file saving directory": "文件保存目录",
     "filter by {name}": "根据{name}过滤",
     "fold": "收起",
@@ -751,6 +757,7 @@
     "no quota": "暂无配额",
     "no results yet": "暂无结果",
     "no running runtime": "没有运行的Runtime",
+    "none": "无",
     "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
@@ -765,7 +772,6 @@
     "operate": "操作",
     "operated successfully": "操作成功",
     "operation": "操作",
-    "Operations": "操作",
     "operation log": "操作日志",
     "operation manage platform": "运营管理平台",
     "operations": "操作",
@@ -789,8 +795,8 @@
     "pending execution": "待执行",
     "platform configs": "平台配置",
     "please authenticate first": "请先进行认证",
-    "please choose {name}": "请选择{name}",
     "please choose the {name}": "请选择{name}",
+    "please choose {name}": "请选择{name}",
     "please confirm your password!": "请确认你的密码!",
     "please contact": "请联系",
     "please deal with it promptly": "请及时处理",
@@ -800,8 +806,6 @@
     "please enter an integer between 1 ~ 65535!": "请输入 1 ~ 65535 之间的整数!",
     "please enter the correct format": "请输入正确格式",
     "please enter verification code": "请输入验证码",
-    "Please enter {name}": "请输入{name}",
-    "Please enter the {name}": "请输入{name}",
     "please fill in the correct IP address or domain name!": "请填写正确的 IP 地址或域名!",
     "please fill in the correct outbox username!": "请填写正确的发件箱用户名!",
     "please fill in the correct value": "请填写正确的值",
@@ -900,8 +904,7 @@
     "start with {name}": "以 {name} 开头",
     "startup error": "启动错误",
     "startup failed": "启动失败",
-    "state": "状态",
-    "Status": "状态",
+    "status": "状态",
     "status switched successfully": "状态切换成功",
     "stay tuned": "敬请期待",
     "still unable to connect after trying again": "尝试重试后仍然无法连接",
