--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -508,7 +508,6 @@
     "notice deprecate successfully": "deprecate successfully",
     "notice deprecated": "deprecated",
     "notice edit": "Edit",
-    "notice operation": "operation",
     "notice publish": "Release",
     "notice publish successfully": "publish successfully",
     "notice published": "released",
@@ -680,6 +679,7 @@
     "Filter conditions": "Filter conditions",
     "Filter-machine": "Filter",
     "Form Edit": "Form Edit",
+    "Form edit": "Form edit",
     "Form preview": "Form preview",
     "Middleware": "Middleware",
     "New configuration": "New configuration",
@@ -873,7 +873,8 @@
     "Backlog": "Backlog",
     "Based on source": "Based on source",
     "Basic": "Basic",
-    "Batch Operation": "Batch Operation",
+    "Basic information": "Basic information",
+    "Batch Operations": "Batch Operations",
     "Blocked": "Blocked",
     "Board": "Board",
     "Branch Rule": "Branch Rule",
@@ -889,6 +890,7 @@
     "Change Executor": "Change Executor",
     "Choose branch": "Choose branch",
     "Choose issue": "Choose issue",
+    "Choose the iteration": "Choose the iteration",
     "Click here to comment": "Click here to comment",
     "Click to add a URL": "Click to add a URL",
     "Click to add app artifacts": "Click to add app artifacts",
@@ -939,6 +941,7 @@
     "Creation time-artifact": "Creation time",
     "Creator": "Creator",
     "Creator-artifact": "Creator",
+    "Currently Excel files are supported": "Currently Excel files are supported",
     "Currently XMind and Excel files are supported": "Currently XMind and Excel files are supported",
     "Custom": "Custom",
     "Custom Issue Field": "Custom Issue Field",
@@ -988,6 +991,7 @@
     "Estimated time": "Estimated time",
     "Example": "Example",
     "Execute Inputs": "Execute Inputs",
+    "Execute without environment": "Execute without environment",
     "Execution Records": "Execution Records",
     "Execution rate": "Execution rate",
     "Executor": "Executor",
@@ -1110,6 +1114,7 @@
     "No artifacts selected": "No artifacts selected",
     "No body in the current request": "No body in the current request",
     "No content": "No content",
+    "No environment": "No environment",
     "No followers": "No followers",
     "No followers-now": "No followers",
     "No starred apps": "No starred apps",
@@ -1273,6 +1278,8 @@
     "Title-issue": "Title",
     "Title-ticket": "Title",
     "To Formal": "To Formal",
+    "To import with Excel, please": "To import with Excel, please ",
+    "To import with XMind, please": "To import with XMind, please",
     "Today": "T",
     "Today is {time}": "Today is {time}",
     "Total number of interfaces": "Total number of interfaces",
@@ -1308,7 +1315,6 @@
     "Wait deploy": "Wait deploy",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
     "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.": "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.",
-    "When you click directly, it will execute cases without environment.": "when you click directly, will execute cases without environment",
     "Work description": "Work description",
     "abandoned": "abandoned",
     "ability app": "ability app",
@@ -1472,7 +1478,6 @@
     "creation method": "creation method",
     "current": "current",
     "current branch or path": "current branch or path",
-    "currently supports importing Excel files": "currently support importing Excel files",
     "custom addon config": "custom addon config",
     "custom fields": "custom fields",
     "data bank": "data bank",
@@ -1523,7 +1528,6 @@
     "empty, not empty": "Empty, Not empty",
     "empty-markdown-content": "\n### Readme\n\n\n*Here you can show your talents in documentation,*\n\n*to let members know the background, goals, and other information of the project via awesome graphs and text,*\n\n*to share project documents, specifications, and other materials,*\n\n*and more.*",
     "encrypted files cannot be downloaded": "encrypted files cannot be downloaded",
-    "end date": "end date",
     "enter branch name to filter": "enter branch name to filter",
     "enter branch or tag name to filter": "enter branch or tag name to filter",
     "enter to filter use cases": "enter to filter use cases",
@@ -1577,8 +1581,6 @@
     "health check mechanism": "health check mechanism",
     "historical analysis": "historical analysis",
     "hosts mapping": "hosts mapping",
-    "if you need to import with Excel, please": "if you need to import with Excel, please ",
-    "if you want to import with XMind, please": "if you want to import with XMind, please",
     "image processing": "image processing",
     "import parameters": "import parameters",
     "input bug name": "input bug name",
@@ -1647,7 +1649,6 @@
     "mr-tpl-unit-test": "Unit testing（Note:unit testing must be able to run locally, in any environment, please mock or evade dependencies）",
     "must start with a letter or number": "must start with a letter or number",
     "name is required": "name is required",
-    "new": "new",
     "new backup": "new backup",
     "new branch added successfully": "new branch added successfully",
     "new filter": "new filter",
@@ -1658,7 +1659,6 @@
     "no choice {name}": "no choice {name}",
     "no comparison branch selected": "no comparison branch selected",
     "no data, please confirm if there is a corresponding test code": "no data, please confirm if there is a corresponding test code",
-    "no environment": "no environment",
     "no host address": "no host address",
     "no ip address": "no ip address",
     "no matching data": "no matching data",
@@ -1693,10 +1693,12 @@
     "p1": "P1",
     "p2": "P2",
     "package name": "package name",
+    "parameter configuration": "parameter configuration",
     "parameter information": "parameter information",
     "parameter key can only contain letters, numbers, dots, underscores and hyphens": "parameter key can only contain letters, numbers, dots, underscores and hyphens",
     "parameter value": "parameter value",
     "parameter value (required)": "parameter value (required)",
+    "participant": "participant",
     "pass": "pass",
     "paste the url path here": "paste the url path here",
     "path": "path",
@@ -1710,7 +1712,7 @@
     "pipeline-changed-tip2": "the content of the current pipeline has been changed, the details can be",
     "pipeline-run-tip": "The current configuration is historical, please switch to the latest configuration before operating",
     "plan": "plan",
-    "plan name": "plan name",
+    "plan name": "Name",
     "plan-remove-case-confirm": "are you sure to remove the currently selected use case in the current plan?",
     "please add a test leader": "please add a test leader",
     "please add tasks first, and then configure outputs": "please add tasks first, and then configure outputs",
@@ -1773,6 +1775,7 @@
     "ports": "ports",
     "post comment": "post comment",
     "previous": "previous",
+    "principal": "principal",
     "professional edition": "professional edition",
     "project created successfully": "project created successfully",
     "project deleted successfully": "project deleted successfully",
@@ -1835,7 +1838,6 @@
     "select data domain": "select data domain",
     "select group": "select group",
     "select instance": "select instance",
-    "select iteration": "select iteration",
     "self-test situation": "self-test situation",
     "service architecture": "service architecture",
     "service deployment": "service deployment",
@@ -1861,7 +1863,6 @@
     "start analysis": "start analysis",
     "start command": "start command",
     "start cron": "start cron",
-    "start date": "start date",
     "start executing the build": "start executing the build",
     "start exporting, please view detail in records": "start exporting, please view detail in records",
     "start importing, please view detail in records": "start importing, please view detail in records",
