--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -508,7 +508,6 @@
     "notice deprecate successfully": "停用成功",
     "notice deprecated": "已停用",
     "notice edit": "编辑",
-    "notice operation": "操作",
     "notice publish": "发布",
     "notice publish successfully": "发布成功",
     "notice published": "已发布",
@@ -680,6 +679,7 @@
     "Filter conditions": "筛选过滤条件",
     "Filter-machine": "筛选器",
     "Form Edit": "表单编辑",
+    "Form edit": "表单编辑",
     "Form preview": "表单预览",
     "Middleware": "中间件",
     "New configuration": "新增配置",
@@ -873,7 +873,8 @@
     "Backlog": "待规划",
     "Based on source": "基于源",
     "Basic": "基本",
-    "Batch Operation": "批量处理",
+    "Basic information": "基本信息",
+    "Batch Operations": "批量处理",
     "Blocked": "阻塞",
     "Board": "看板",
     "Branch Rule": "分支规则",
@@ -889,6 +890,7 @@
     "Change Executor": "变更执行人",
     "Choose branch": "选择分支",
     "Choose issue": "选择事项",
+    "Choose the iteration": "选择迭代",
     "Click here to comment": "点击此处发表评论",
     "Click to add a URL": "点击添加 URL",
     "Click to add app artifacts": "点击添加应用制品",
@@ -939,6 +941,7 @@
     "Creation time-artifact": "制品创建时间",
     "Creator": "创建者",
     "Creator-artifact": "制品创建人",
+    "Currently Excel files are supported": "当前支持导入Excel类型文件",
     "Currently XMind and Excel files are supported": "当前支持导入Xmind及Excel两种类型文件",
     "Custom": "自定义",
     "Custom Issue Field": "事项自定义字段",
@@ -988,6 +991,7 @@
     "Estimated time": "预估时间",
     "Example": "示例",
     "Execute Inputs": "执行入参",
+    "Execute without environment": "直接点击时，所选环境为无环境",
     "Execution Records": "执行记录",
     "Execution rate": "执行率",
     "Executor": "执行人",
@@ -1110,6 +1114,7 @@
     "No artifacts selected": "暂未选择任何制品",
     "No body in the current request": "当前请求无body",
     "No content": "暂无内容",
+    "No environment": "无环境",
     "No followers": "无人关注",
     "No followers-now": "暂无成员关注",
     "No starred apps": "暂无星标应用",
@@ -1273,6 +1278,8 @@
     "Title-issue": "问题标题",
     "Title-ticket": "工单标题",
     "To Formal": "转正式",
+    "To import with Excel, please": "如需以 Excel 导入，请先",
+    "To import with XMind, please": "如需以 XMind 导入，请先",
     "Today": "今",
     "Today is {time}": "今天是 {time}",
     "Total number of interfaces": "接口总数",
@@ -1308,7 +1315,6 @@
     "Wait deploy": "等待部署",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.": "分支保护开启后，只有应用所有者、应用研发主管才能操作，其他成员只能通过mr提交代码",
-    "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
     "Work description": "工作内容",
     "abandoned": "废弃",
     "ability app": "能力应用",
@@ -1472,7 +1478,6 @@
     "creation method": "创建方式",
     "current": "当前",
     "current branch or path": "当前分支或路径",
-    "currently supports importing Excel files": "当前支持导入Excel类型文件",
     "custom addon config": "自定义服务配置",
     "custom fields": "自定义字段",
     "data bank": "数据银行",
@@ -1523,7 +1528,6 @@
     "empty, not empty": "为空、不为空",
     "empty-markdown-content": "\n### readme\n\n\n*此处可以尽情发挥你文档小能手的才华*\n\n*可以通过一段酷炫的图文让项目成员都清楚项目的背景、目标等信息*\n\n*也可以共享项目文档、规范等材料*\n\n*还可以...*",
     "encrypted files cannot be downloaded": "加密文件不可下载",
-    "end date": "结束日期",
     "enter branch name to filter": "输入分支名进行过滤",
     "enter branch or tag name to filter": "输入分支名或标签名进行过滤",
     "enter to filter use cases": "输入以过滤用例",
@@ -1577,8 +1581,6 @@
     "health check mechanism": "健康检查机制",
     "historical analysis": "历史分析",
     "hosts mapping": "Hosts 映射",
-    "if you need to import with Excel, please": "如需以 Excel 导入，请先",
-    "if you want to import with XMind, please": "如需以 XMind 导入，请先",
     "image processing": "图像处理",
     "import parameters": "导入参数",
     "input bug name": "输入缺陷名称",
@@ -1647,7 +1649,6 @@
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
     "name is required": "名称不能为空",
-    "new": "新建",
     "new backup": "新建备份",
     "new branch added successfully": "新建分支成功",
     "new filter": "存为新筛选器",
@@ -1658,7 +1659,6 @@
     "no choice {name}": "暂未选择{name}",
     "no comparison branch selected": "未选择对比分支",
     "no data, please confirm if there is a corresponding test code": "暂无数据,请确认是否有对应测试代码",
-    "no environment": "无环境",
     "no host address": "暂无主机地址",
     "no ip address": "暂无ip地址",
     "no matching data": "无匹配数据",
@@ -1693,10 +1693,12 @@
     "p1": "P1",
     "p2": "P2",
     "package name": "package名称",
+    "parameter configuration": "参数配置",
     "parameter information": "参数信息",
     "parameter key can only contain letters, numbers, dots, underscores and hyphens": "参数key只能包含字母 数字 . _ -",
     "parameter value": "参数值",
     "parameter value (required)": "参数值(必填)",
+    "participant": "参与人",
     "pass": "通过",
     "paste the url path here": "请将 url 路径粘贴至该处",
     "path": "路径",
@@ -1773,6 +1775,7 @@
     "ports": "端口",
     "post comment": "发表评论",
     "previous": "上一步",
+    "principal": "负责人",
     "professional edition": "专业版",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
@@ -1835,7 +1838,6 @@
     "select data domain": "选择数据域",
     "select group": "选择群组",
     "select instance": "选择实例",
-    "select iteration": "选择迭代",
     "self-test situation": "自测情况",
     "service architecture": "服务架构",
     "service deployment": "服务部署",
@@ -1861,7 +1863,6 @@
     "start analysis": "启动分析",
     "start command": "启动命令",
     "start cron": "开始定时",
-    "start date": "开始日期",
     "start executing the build": "开始执行构建",
     "start exporting, please view detail in records": "开始导出，请在记录中查看详细信息",
     "start importing, please view detail in records": "开始导入，请在记录中查看详细信息",
