feat(dop): internationalization optimization in project pipeline

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -835,7 +835,7 @@
     "Add test plan": "Add test plan",
     "Add to Test Plan": "Add to Test Plan",
     "Add-branch-rule": "Add",
-    "Add-create": "Add-create",
+    "Create": "Create",
     "Add-data-source": "Add",
     "Add-label": "Add",
     "Add-merge-request": "Add",
@@ -1144,6 +1144,7 @@
     "Pass rate": "Pass rate",
     "Paste": "Paste",
     "Personal contribution": "Personal contribution",
+    "Pipeline file": "Pipeline file",
     "Pipeline type": "Pipeline type",
     "Plan": "Plan",
     "Plan details": "Plan details",
