--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -835,7 +835,7 @@
     "Add test plan": "新建测试计划",
     "Add to Test Plan": "添加到测试计划",
     "Add-branch-rule": "新增分支规则",
-    "Add-create": "创建",
+    "Create": "创建",
     "Add-data-source": "添加数据源",
     "Add-label": "添加标签",
     "Add-merge-request": "新建合并请求",
@@ -1144,6 +1144,7 @@
     "Pass rate": "通过率",
     "Paste": "粘贴",
     "Personal contribution": "个人贡献",
+    "Pipeline file": "pipeline文件",
     "Pipeline type": "流水线分类",
     "Plan": "执行计划",
     "Plan details": "计划详情",
