feat(dop): i18n * appcenter: remain 30% * Resource Summary * Tickets * Settings

--- a/locales/en.json
+++ b/locales/en.json
@@ -107,6 +107,7 @@
     "Configuration Sheet": "Configuration Sheet",
     "Configuration-alarm": "Configuration",
     "Confirm to exit the current app": "Confirm to exit the current app?",
+    "Confirm to exit the current {name}?": "Confirm to exit the current {name}?",
     "Console": "Console",
     "Contact your organization administrator to invite you to join": "Contact your organization administrator to invite you to join",
     "Container": "Container",
@@ -175,7 +176,6 @@
     "First Contentful Paint Time": "First Contentful Paint Time",
     "First Paint Time": "First Paint Time",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see",
-    "For editing members, setting member roles and role permissions, please refer to": "For editing members, setting member roles and role permissions, please refer to",
     "Frankfurt": "Frankfurt",
     "Fri": "Fri",
     "Full screen": "Full screen",
@@ -494,7 +494,6 @@
     "alibaba cloud": "alibaba cloud",
     "all keys are required": "all keys are required",
     "allocated": "allocated",
-    "allocated and utilization rate": "allocated and utilization rate",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
     "analysis rule": "analysis rule",
@@ -841,6 +840,7 @@
     "public": "public",
     "queuing": "queuing",
     "queuing for resources": "queuing for resources",
+    "quota and usage": "quota and usage",
     "ready to execute": "ready to execute",
     "reason for rejection": "reason for rejection",
     "recent import and export records": "recent import and export records",
@@ -893,7 +893,7 @@
     "select {name}": "select {name}",
     "selected template": "selected template",
     "selected {name}": "selected {name}",
-    "separated by comma, start with letters and can contain": "multiple use, separate, start with a letter and can contain: numbers / _ - . $ # @ *, * only available in last",
+    "separated by comma, start with letters and can contain": "Multiple use, separate, start with a letter and can contain: numbers / _ - . $ # @ *, * only available in last",
     "service": "service",
     "services": "services",
     "set as {type}": "set as {type}",
