--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -668,6 +668,7 @@
     "Custom": "自定义",
     "DEFAULT": "默认",
     "Default configuration": "默认配置",
+    "Deleted projects cannot be recovered. Please enter the {name} to confirm.": "项目删除后无法恢复，请输入{name}进行确认",
     "Development": "开发",
     "Download Log": "下载日志",
     "Edit Configuration": "修改配置",
@@ -745,6 +746,7 @@
     "delete": "删除当前应用",
     "delete current {deleteItem}": "删除当前{deleteItem}",
     "delete service": "删除服务",
+    "delete-project": "删除当前项目",
     "double confirm": "再次确认",
     "duration(minutes)": "时长(分钟)",
     "error occurred": "页面出错了",
@@ -754,6 +756,8 @@
     "exit-confirm-tip app": "退出当前应用后，将不再有该应用的权限，请谨慎操作",
     "exit-confirm-tip {name}": "退出当前{name}后，将不再有该{name}的权限，请谨慎操作",
     "exit-sub-tip app": "退出当前应用后，将不再有参与应用工作的权限，如要再次加入需要应用管理员添加，请确认是否退出？",
+    "exit-app": "退出当前项目",
+    "exit-project": "退出当前项目",
     "exit-sub-tip {name}": "退出当前{name}后，将不再有参与{name}工作的权限，如要再次加入需要{name}管理员添加，请确认是否退出？",
     "file type": "文件类型",
     "folder": "文件夹",
@@ -839,7 +843,6 @@
     "Add test plan": "新建测试计划",
     "Add to Test Plan": "添加到测试计划",
     "Add-branch-rule": "新增分支规则",
-    "Create": "创建",
     "Add-data-source": "添加数据源",
     "Add-label": "添加标签",
     "Add-merge-request": "新建合并请求",
@@ -938,6 +941,7 @@
     "Copy issue": "复制事项",
     "Copy to": "复制到",
     "Coverage": "覆盖率",
+    "Create": "创建",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "创建新事项，并可以通过拖拽至右侧迭代，安排事项的优先级",
     "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.": "创建新迭代，并可以将左侧的待处理事项拖拽至某个迭代，安排事项的优先级",
     "Create deployment": "创建部署",
@@ -1569,7 +1573,6 @@
     "file moved": "文件移动",
     "file must be smaller than 20 MB": "文件必须小于 20MB！",
     "file type error": "文件类型错误",
-    "files": "代码仓库",
     "filter by application name": "通过所在应用名过滤",
     "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
@@ -1704,7 +1707,6 @@
     "parameter key can only contain letters, numbers, dots, underscores and hyphens": "参数key只能包含字母 数字 . _ -",
     "parameter value": "参数值",
     "parameter value (required)": "参数值(必填)",
-    "participant": "参与人",
     "pass": "通过",
     "paste the url path here": "请将 url 路径粘贴至该处",
     "path": "路径",
@@ -1782,7 +1784,6 @@
     "ports": "端口",
     "post comment": "发表评论",
     "previous": "上一步",
-    "principal": "负责人",
     "professional edition": "专业版",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
