--- a/locales/zh.json
+++ b/locales/zh.json
@@ -107,6 +107,7 @@
     "Configuration Sheet": "配置单",
     "Configuration-alarm": "告警配置",
     "Confirm to exit the current app": "确认退出当前应用?",
+    "Confirm to exit the current {name}?": "确认退出当前{name}?",
     "Console": "控制台",
     "Contact your organization administrator to invite you to join": "联系组织管理员，邀请您加入",
     "Container": "容器",
@@ -175,7 +176,6 @@
     "First Contentful Paint Time": "首屏时间",
     "First Paint Time": "白屏时间",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "各环境对应的集群资源信息，具体集群的概念和设置请参考",
-    "For editing members, setting member roles and role permissions, please refer to": "编辑成员，设置成员角色，相关角色权限请参考",
     "Frankfurt": "法兰克福",
     "Fri": "五",
     "Full screen": "全屏",
@@ -494,7 +494,6 @@
     "alibaba cloud": "阿里云",
     "all keys are required": "所有标示必填",
     "allocated": "分配量：",
-    "allocated and utilization rate": "配额及使用率",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
     "analysis rule": "分析规则",
@@ -841,6 +840,7 @@
     "public": "公有",
     "queuing": "排队中",
     "queuing for resources": "排队等待资源中",
+    "quota and usage": "配额及使用率",
     "ready to execute": "准备执行",
     "reason for rejection": "拒绝原因",
     "recent import and export records": "最近的导入导出记录",
@@ -929,7 +929,7 @@
     "submitter": "提交人",
     "succeed": "成功",
     "such as": "如",
-    "sure to exit the current {name}?": "确认退出当前{name}?",
+    "sure to exit the current {name}?": "确认退出当前应用?",
     "tag": "标签",
     "tcp protocol": "TCP 协议",
     "template already exists": "该模板已存在",
@@ -998,7 +998,7 @@
     "warning": "警告",
     "week": "周",
     "weeks": "周",
-    "whether to put {name} in public": "是否公开{name}",
+    "whether to put {name} in public": "__NOT_TRANSLATED__",
     "whether to use a proxy": "是否使用代理",
     "you have new site message, please pay attention to check": "您有新的站内信，请注意查看",
     "{action} successfully": "{action}成功",
